@@ -7,7 +7,9 @@
 
 <ul>
 
-	<li>Added mxmlLoadFd() and mxmlSaveFd() functions.
+	<li>Added mxmlLoadFd() and mxmlSaveFd() functions.</li>
+
+	<li>Fixed multi-word UTF-16 handling.</li>
 
 </ul>
 
